# wasm-rock-paper-scissors

./: .gitignore  Cargo.toml  Makefile.toml  index.html  styles.css  wasm-rock-paper-scissors-5ed663c665c57db5.js  wasm-rock-paper-scissors-5ed663c665c57db5_bg.wasm  wasm.js  wasm_bg.wasm
.github/workflows/: build.yml
src/: game.rs  lib.rs  main.rs  util.rs
static/: index.html
