[package]
name = "wasm-rock-paper-scissors"
version = "0.1.1"
authors = ["Yukun Guo <gyk.net@gmail.com>"]
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wasm-bindgen = "0.2.83"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
